--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,8 @@
 .home{
-    background-color: rebeccapurple;
-    .title{
-        color: white;
+    display: flex;
+
+    .homeContainer{
+        background-color: lightcoral;
+        flex: 6;
     }
 }
