--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,4 +1,33 @@
 .sidebar{
-    background-color: lightblue;
+    background-color: white;
+    border-right: 0.5px solid rgb(138, 138, 138);
+    min-height: 100vh;
+
     flex: 1;
+    .top{
+        height: 50px;
+        display: flex;
+        align-items:center;
+        justify-content: center;
+        background-color: whitesmoke;
+        
+    }
+    .logo{
+        font-size: 20px;
+        font-weight: bold;
+        color:#0081C9 ;
+    }
+    .hr{
+        height: 0;
+    }
+    .center{
+        padding-left: 10px;
+        
+        ul{
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+    }
+
 }
