--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -29,6 +29,12 @@
         }
         .items{
             display: flex;
+            align-items: center;
+            .item{
+                display: flex;
+                align-items: center;
+                margin-right: 20px;
+            }
         }
     }
 }
