--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,5 +1,5 @@
 .navbar{
-    height: 50px;
+    height: 60px;
     border-bottom: 0.5px solid rgb(231,228,228);
     display: flex;
     align-items: center;
@@ -18,6 +18,11 @@
             align-items: center;
             border: 0.5px solid lightgrey;
             padding: 3px;
+            height: 25px;
+            width: 260px;
+            .searchIcon{
+                margin-left: 25%;
+            }
             input{
                 border: none;
                 outline: none;
@@ -34,6 +39,32 @@
                 display: flex;
                 align-items: center;
                 margin-right: 20px;
+                position: relative;
+
+                .icon{
+                    font-size: 30px;
+                }
+                .avatar{
+                    height: 40px;
+                    width: 40px;
+                    border-radius: 50px;
+
+                }
+                .counter{
+                    height: 20px;
+                    width: 20px;
+                    background-color: rgb(226, 57, 57);
+                    border-radius: 50px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    font-size: 17px;
+                    font-weight: bold;
+                    position: absolute;
+                    top: -5px;
+                    right: -5px ;
+
+                }
             }
         }
     }
