--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -55,6 +55,7 @@
                     width: 20px;
                     background-color: rgb(226, 57, 57);
                     border-radius: 50px;
+                    color: white;
                     display: flex;
                     align-items: center;
                     justify-content: center;
