--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,5 +3,10 @@
 
     .homeContainer{
         flex: 6;
+        .wigets{
+            display: flex;
+            padding: 20px;
+            gap:20px
+        }
     }
 }
