--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -5,11 +5,11 @@
 
     flex: 1;
     .top{
-        height :60px;
+        height :55px;
         display: flex;
         align-items:center;
         justify-content: center;
-        background-color: whitesmoke;
+        background-color: white;
         
     }
     .logo{
