--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,10 +3,13 @@
 
     .homeContainer{
         flex: 6;
-        .wigets{
+        .wigets, .charts {
             display: flex;
             padding: 20px;
             gap:20px
+        }
+        .charts{
+            padding: 5px 20px;
         }
     }
 }
