--- a/src/components/featured/featured.scss
+++ b/src/components/featured/featured.scss
@@ -1,4 +1,5 @@
 .feature{
+    border-radius: 5px;
     flex: 2;
     box-shadow: 10px 10px 9px -8px rgba(0,0,0,0.75);
     -webkit-box-shadow: 10px 10px 9px -8px rgba(0,0,0,0.75);
@@ -12,6 +13,62 @@
             font-size: 16px;
             font-weight: 500;
             color: #6b6b6b;
+        }
+
+    }
+    .bottom{
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 15px;
+        .featuredChart{
+            height: 100px;
+            width: 100px;
+        }
+        .title{
+            font-weight: 500;
+            color: gray;
+        }
+        .amount{
+            font-size: 30px;
+        }
+        .description{
+            font-weight: 300;
+            font-size: 15px;
+            color: gray;
+            text-align: center;
+
+        }
+        .summary{
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content:space-between ;
+            .item{
+                text-align: center;
+            }
+            .itemTitle{
+                font-size: 16px;
+                color: gray;
+            }
+            .itemResult{
+                display: flex;
+                align-items: center ;
+                margin-top: 10px;
+                font-size: 14px;
+
+                &.positive{
+                    color: green;
+                }
+
+                &.negitive{
+                    color: red;
+                }
+
+            }
+
         }
     }
 }
