finish chart started table

--- a/src/components/chart/chart.scss
+++ b/src/components/chart/chart.scss
@@ -1,3 +1,15 @@
 .chart{
     flex: 4;
+    box-shadow: 10px 10px 9px -12px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 10px 10px 9px -12px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 9px -12px rgba(0,0,0,0.75);
+    padding: 10px;
+    color: gray;
+    border-radius: 5px;
+    .title{
+        margin-bottom: 15px;
+    }
+    .chartGrid{
+        stroke: rgb(226, 222, 222);
+    }
 }
