--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,15 +1,32 @@
-.home{
+.home {
     display: flex;
 
-    .homeContainer{
+    .homeContainer {
         flex: 6;
-        .wigets, .charts {
+
+        .wigets,
+        .charts {
             display: flex;
             padding: 20px;
-            gap:20px
+            gap: 20px
         }
-        .charts{
+
+        .charts {
             padding: 5px 20px;
+        }
+
+        .listContainer {
+            box-shadow: 10px 10px 9px -12px rgba(0, 0, 0, 0.75);
+            -webkit-box-shadow: 10px 10px 9px -12px rgba(0, 0, 0, 0.75);
+            -moz-box-shadow: 10px 10px 9px -12px rgba(0, 0, 0, 0.75);
+            margin: 20px;
+            padding: 20px;
+            .listTitle{
+                font-weight: 500;
+                color:gray;
+                margin-bottom: 15px;
+
+            }
         }
     }
 }
