--- a/src/components/featured/featured.scss
+++ b/src/components/featured/featured.scss
@@ -1,9 +1,9 @@
 .feature{
     border-radius: 5px;
     flex: 2;
-    box-shadow: 10px 10px 9px -8px rgba(0,0,0,0.75);
-    -webkit-box-shadow: 10px 10px 9px -8px rgba(0,0,0,0.75);
-    -moz-box-shadow: 10px 10px 9px -8px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 9px -12px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 10px 10px 9px -12px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 9px -12px rgba(0,0,0,0.75);
     padding: 10px;
     .top{
         display: flex;
@@ -24,8 +24,8 @@
         justify-content: center;
         gap: 15px;
         .featuredChart{
-            height: 100px;
-            width: 100px;
+            height: 120px;
+            width: 120px;
         }
         .title{
             font-weight: 500;
@@ -47,6 +47,7 @@
             align-items: center;
             justify-content:space-between ;
             .item{
+                margin-top: 15px;
                 text-align: center;
             }
             .itemTitle{
