--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -1,3 +1,26 @@
 .table{
-    
+    .cellWrapper{
+        display: flex;
+        align-items: center;
+        .image{
+            width: 32px;
+            height: 32px;
+            border-radius: 50%;
+            margin-right: 10px;
+            object-fit: cover;
+        }
+    }
+    .status{
+        padding: 5px;
+        border-radius:5px;
+        font-weight: bold;
+        &.Approved{
+            color: green;
+            background-color:lightgreen ;
+        }
+        &.Pending{
+            color: goldenrod;
+            background-color:lightyellow ; 
+        }
+    }
 }
