--- a/src/components/datatables/datatables.scss
+++ b/src/components/datatables/datatables.scss
@@ -1,3 +1,18 @@
 .datatables{
     height: 600px;
+    padding: 20px;
+
+    .cellwithImg{
+        display: flex;
+        align-items: center;
+
+        .cellImg{
+            width: 32px;
+            height: 32px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-right: 20px ;
+        }
+    }
+
 }
