--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -13,7 +13,7 @@
     .status{
         padding: 5px;
         border-radius:5px;
-        font-weight: bold;
+        font-weight: 600;
         &.Approved{
             color: green;
             background-color:lightgreen ;
