adding new user file

--- a/src/pages/single/single.scss
+++ b/src/pages/single/single.scss
@@ -10,9 +10,8 @@
             .left{
                 position: relative;
                 flex: 1;
-                box-shadow: 10px 10px 9px -12px rgba(0,0,0,0.75);
-                -webkit-box-shadow: 10px 10px 9px -12px rgba(0,0,0,0.75);
-                -moz-box-shadow: 10px 10px 9px -12px rgba(0,0,0,0.75);
+                -webkit-box-shadow: 2px 4px 10px 1px rgba(0,0,0,0.47);
+                box-shadow: 2px 4px 10px 1px rgba(201,201,201,0.47);
                 padding: 20px;
                 .editButton{
                     position: absolute;
@@ -59,10 +58,17 @@
                 flex: 2;
             }
         }
+        .buttom{
+            -webkit-box-shadow: 2px 4px 10px 1px rgba(0,0,0,0.47);
+            box-shadow: 2px 4px 10px 1px rgba(201,201,201,0.47);
+            padding: 20px; 
+            margin:10px 20px ;           
     }
+    
     .title{
-       font-size: 18px;
-       color: rgb(150, 150, 150);
-       margin-bottom: 20px; 
+        font-size: 18px;
+        color: rgb(150, 150, 150);
+        margin-bottom: 20px; 
     }
+}
 }
