--- a/src/pages/new/new.scss
+++ b/src/pages/new/new.scss
@@ -3,5 +3,24 @@
     width: 100;
     .newContainer{
         flex: 6;
+
+      .top,.buttom{
+        -webkit-box-shadow: 2px 4px 10px 1px rgba(0,0,0,0.47);
+        box-shadow: 2px 4px 10px 1px rgba(201,201,201,0.47);
+        padding: 10px;
+        margin: 20px;
+        display: flex;
+        h1{
+            color: gray;
+            font-size: 20px;
+        }
+        .left{
+            flex: 1;
+        }
+        .right{
+            flex: 2;
+        }
+      }  
     }
+
 }
