small change in new

--- a/src/pages/new/new.scss
+++ b/src/pages/new/new.scss
@@ -16,6 +16,13 @@
         }
         .left{
             flex: 1;
+            text-align: center;
+            img{
+                width: 100px;
+                height: 100px;
+                border-radius: 50px;
+                object-fit: cover;
+            }
         }
         .right{
             flex: 2;
