--- a/src/pages/new/new.scss
+++ b/src/pages/new/new.scss
@@ -26,6 +26,35 @@
         }
         .right{
             flex: 2;
+            form{
+                display: flex;
+                flex-wrap: wrap;
+                gap: 20px;
+                .formInput{
+                    width: 40%;
+                    label{
+                        display: flex;
+                        align-items: center;
+                        gap: 10px;
+                        .icon{
+                            cursor: pointer;
+                        }
+                    }
+                    input{
+                        width: 100%;
+                        padding:5px;
+                        border: none;
+                        border-bottom: 1px solid gray;
+
+                    }
+                }
+                button{
+                    width: 150px;
+                    padding: 10px;
+                    background-color: teal;
+                    color: white;
+                }
+            }
         }
       }  
     }
